--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-numba==0.55.2
+numba>=0.55.2
 numpy>=1.21.5
-pandas==1.4.3
-pytest==6.2.4
-scikit-learn==0.24.2
-scipy==1.7.1
-statsmodels==0.13.2
-tqdm== 4.64.0
-typing==3.7.4.3
-typing_extensions==4.3.0
+pandas>=1.4.3
+pytest>=6.2.4
+scikit-learn>=0.24.2
+scipy>=1.7.1
+statsmodels>=0.13.2
+tqdm>=4.64.0
+typing>=3.7.4.3
+typing_extensions>=4.3.0
